added p tags, and some ordered lists

--- a/first_html.html
+++ b/first_html.html
@@ -3,6 +3,11 @@
 	<head>This is a header</head>
 	<body>
 		<p>bousou is too leetell</p>
+		<p>
+			<ul>go to grocery store</ul>
+			<ul>go to store</ul>
+			<ul>go to gym</ul>
+		</p>
 		<script lang="javascript">prompt("hit yes"); alert("come on guy")</script>
 	</body>
 </html>
