--- a/first_html.html
+++ b/first_html.html
@@ -3,11 +3,9 @@
 	<head>This is a header</head>
 	<body>
 		<p>bousou is too leetell</p>
-		<p>
-			<ul>go to grocery store</ul>
-			<ul>go to store</ul>
-			<ul>go to gym</ul>
-		</p>
-		<script lang="javascript">prompt("hit yes"); alert("come on guy")</script>
+		<ul>go to grocery store</ul>
+		<ul>go to store</ul>
+		<ul>go to gym</ul>
+		<script lang="javascript"></script>
 	</body>
 </html>
